@@ -38,16 +38,27 @@
           This section sets the authentication policies of the application. Possible modes are "Windows",
           "Forms", "Passport" and "None"
     -->
-		<authentication mode="Windows"/>
-		<!--  AUTHORIZATION
+    <authentication mode="Forms">
+      <!--  AUTHORIZATION
           This section sets the authorization policies of the application. You can allow or deny access
           to application resources by user or role. Wildcards: "*" mean everyone, "?" means anonymous
           (unauthenticated) users.
     -->
-		<authorization>
-			<allow users="*"/>
-			<!-- Allow all users -->
-			<!--  <allow     users="[comma separated list of users]"
+      <forms loginUrl="login.aspx"
+        protection="All"
+        timeout="30"
+        name=".ASPXAUTH"
+        path="/"
+        requireSSL="false"
+        slidingExpiration="true"
+        defaultUrl="default.aspx"
+        cookieless="UseDeviceProfile"
+        enableCrossAppRedirects="false" />
+
+    </authentication>
+    <authorization>
+      <deny users="?" />
+      <!--  <allow     users="[comma separated list of users]"
                              roles="[comma separated list of roles]"/>
                   <deny      users="[comma separated list of users]"
                              roles="[comma separated list of roles]"/>
