@@ -1,0 +1,55 @@
+﻿<%@ Page Language="C#" MasterPageFile="~/BMW.master" AutoEventWireup="true" CodeFile="login.aspx.cs" Inherits="login" %>
+
+<asp:Content ID="Content1" ContentPlaceHolderID="MainContent" Runat="Server">
+    <h2>Login Page</h2>
+    
+    <asp:Login ID="Login1" runat="server" onauthenticate="Login1_Authenticate">
+        <LayoutTemplate>
+            <table border="0" cellpadding="1" cellspacing="0" 
+                style="border-collapse:collapse;">
+                <tr>
+                    <td>
+                        <table border="0" cellpadding="0">
+                            
+                            <tr>
+                                <td align="right">
+                                    <asp:Label ID="UserNameLabel" runat="server" AssociatedControlID="UserName">User 
+                                    Name:</asp:Label>
+                                </td>
+                                <td>
+                                    <asp:TextBox ID="UserName" runat="server"></asp:TextBox>
+                                    <asp:RequiredFieldValidator ID="UserNameRequired" runat="server" 
+                                        ControlToValidate="UserName" ErrorMessage="User Name is required." 
+                                        ToolTip="User Name is required." ValidationGroup="Login1">*User Name Required</asp:RequiredFieldValidator>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="right">
+                                    <asp:Label ID="PasswordLabel" runat="server" AssociatedControlID="Password">Password:</asp:Label>
+                                </td>
+                                <td>
+                                    <asp:TextBox ID="Password" runat="server" TextMode="Password"></asp:TextBox>
+                                    <asp:RequiredFieldValidator ID="PasswordRequired" runat="server" 
+                                        ControlToValidate="Password" ErrorMessage="Password is required." 
+                                        ToolTip="Password is required." ValidationGroup="Login1">*Password Required</asp:RequiredFieldValidator>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="center" colspan="2" style="color:Red;">
+                                    <asp:Literal ID="FailureText" runat="server" EnableViewState="False"></asp:Literal>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td align="right" colspan="2">
+                                    <asp:Button ID="LoginButton" runat="server" CommandName="Login" Text="Log In" 
+                                        ValidationGroup="Login1" />
+                                </td>
+                            </tr>
+                        </table>
+                    </td>
+                </tr>
+            </table>
+        </LayoutTemplate>
+    </asp:Login>
+</asp:Content>
+
