@@ -1,3 +1,12 @@
+Mon Sep 29 19:25:11 UTC 2008  Chris Bellande  <chris.bellande@vanderbilt.edu>
+
+        * utils/BMW/website/Web.config:
+        * utils/BMW/website/login.aspx:
+        * utils/BMW/website/login.aspx.cs:
+		
+		. Added FormsAuthentication so that anonymous users are 
+		  redirected to login page
+
 Mon Sep 29 09:00:40 UTC 2008  James H. Hill  <hillj@isis.vanderbilt.edu>
 
         * utils/BMW/assemblies/CUTS.Data/CUTS.Data.mpc:
